moved form drag handle, context menu button and dev mode identifiers

--- a/fe/src/app/form/context-menu/context-menu.component.html
+++ b/fe/src/app/form/context-menu/context-menu.component.html
@@ -1,4 +1,4 @@
-<fa-icon [icon]="faWrench" [class.expanded]="expanded" class="fa-xs context-menu-button" (click)="toggleContext($event)"></fa-icon>
+<fa-icon [icon]="icon" [class.expanded]="expanded" class="fa-xs context-menu-button" (click)="toggleContext($event)"></fa-icon>
 
 <ul class="context-menu" *ngIf="expanded" [style.top.px]="y" [style.left.px]="x">
   <ng-container *ngIf="availableTypes">
