--- a/fe/src/app/form/form_datepicker/form_datepicker.component.html
+++ b/fe/src/app/form/form_datepicker/form_datepicker.component.html
@@ -1,6 +1,6 @@
 <label [for]="inputElement.propertyName">
     {{inputElement.propertyName | i18n}}
-    <sup class="frmdb-input-dev-mode-label" *ngIf="editMode$ | async">{{inputElement.propertyName}}</sup>
+    <div class="frmdb-input-dev-mode-label" *ngIf="editMode$ | async">{{inputElement.propertyName}}</div>
 </label>
 <ng-container *ngIf="hasControl(parentFormPath)">
     <div class="input-group">
