--- a/fe/src/app/themes/default-theme/navigation/navigation.segment.scss
+++ b/fe/src/app/themes/default-theme/navigation/navigation.segment.scss
@@ -39,6 +39,6 @@
     left: 0;
     font-size: 0.75em;
     color: lightgrey;
-    text-decoration: underline;
+    // text-decoration: underline;
     text-transform: none;
 }
