--- a/fe/src/app/form/form_input/form_input.component.html
+++ b/fe/src/app/form/form_input/form_input.component.html
@@ -1,7 +1,7 @@
 <!-- <edit-panel *ngIf="editMode$|async" [node]="nodeElement"></edit-panel> -->
 <label [for]="inputElement._id">
     {{inputElement.propertyName | i18n}}
-    <sup class="frmdb-input-dev-mode-label" *ngIf="editMode$ | async">{{inputElement.propertyName}}</sup>
+    <div class="frmdb-input-dev-mode-label" *ngIf="editMode$ | async">{{inputElement.propertyName}}</div>
 </label>
 <input [id]="inputElement._id" class="form-control" [type]="getType()" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)"
     *ngIf="hasControl(parentFormPath)" />
