--- a/fe/src/app/form/form_datepicker/form_datepicker.component.html
+++ b/fe/src/app/form/form_datepicker/form_datepicker.component.html
@@ -4,10 +4,6 @@
 </label>
 <ng-container *ngIf="hasControl(parentFormPath)">
     <div class="input-group">
-        <input class="form-control" placeholder="yyyy-mm-dd" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)"
-            ngbDatepicker #d="ngbDatepicker" />
-        <button class="input-group-addon" (click)="d.toggle()" type="button">
-            <i class="fa fa-calendar"></i>
-        </button>
+        <input type="datetime" class="form-control" placeholder="yyyy-mm-dd" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" />
     </div>
 </ng-container>
