fixes and tweaks

--- a/fe/src/app/form/form-horizontal-layout/form-horizontal-layout.component.scss
+++ b/fe/src/app/form/form-horizontal-layout/form-horizontal-layout.component.scss
@@ -7,6 +7,7 @@
     min-width: 1rem;
     min-height: 2rem;
     border-color: transparent;
+    width:100%;
     &.outline {
         border-color: lightgray;
     }
