--- a/fe/src/app/form/form_input/form_input.component.scss
+++ b/fe/src/app/form/form_input/form_input.component.scss
@@ -2,6 +2,9 @@
 @import "~bootstrap/scss/_variables";
 @import "~bootstrap/scss/_mixins";
 :host {
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
     &.form-item-highlight {
         background-color: $gray-300 !important;
         input {
