--- a/fe/src/app/form/form-horizontal-layout/form-horizontal-layout.component.html
+++ b/fe/src/app/form/form-horizontal-layout/form-horizontal-layout.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngFor="let childEl of nodeElement.childNodes">
-  <drop-handle before="true" [item]="childEl" orientation="vertical"></drop-handle>
-  <div form_item [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)"
-    [formReadOnly]="formReadOnly"></div>
+  <drop-handle position="before" [item]="childEl" orientation="vertical"></drop-handle>
+  <form_item class="flex-fill" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)"
+    [formReadOnly]="formReadOnly"></form_item>
 </ng-container>
-<drop-handle before="false" *ngIf="nodeElement.childNodes" [item]="nodeElement.childNodes[nodeElement.childNodes.length-1]" orientation="vertical"></drop-handle>
+<drop-handle position="append" *ngIf="nodeElement.childNodes" [item]="nodeElement" orientation="vertical"></drop-handle>
