--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -1,4 +1,4 @@
-<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container" (dragstart)="dragStart($event)"
+<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container flex-fill" (dragstart)="dragStart($event)"
   (dragend)="dragEnd($event)">
   <fa-icon [icon]="faBars" *ngIf="editMode$|async" class="drag-handle fa-xs" #dragHandle [id]="'drag_'+nodeElement._id"
     (mousedown)="checkHandle($event)"></fa-icon>
@@ -7,7 +7,7 @@
 
   <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
-  <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+  <div form_data_grid *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
   <form-autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-autocomplete>
