--- a/fe/src/app/form/form_datepicker/form_datepicker.component.html
+++ b/fe/src/app/form/form_datepicker/form_datepicker.component.html
@@ -4,6 +4,6 @@
 </label>
 <ng-container *ngIf="hasControl(parentFormPath)">
     <div class="input-group">
-        <input type="datetime" class="form-control" placeholder="yyyy-mm-dd" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" />
+        <input type="date" class="form-control" placeholder="yyyy-mm-dd" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" />
     </div>
 </ng-container>
