--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -7,7 +7,9 @@
 
   <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
-  <div form_data_grid *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+  <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
+  <div form_data_grid *ngSwitchCase="'form_data_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
   <form-autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-autocomplete>
