--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -70,6 +70,8 @@
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-7.jpg')" src="/assets/sidebar_images/sidebar-7.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-8.jpg')" src="/assets/sidebar_images/sidebar-8.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-9.jpg')" src="/assets/sidebar_images/sidebar-9.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-10.jpg')" src="/assets/sidebar_images/sidebar-10.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-11.jpg')" src="/assets/sidebar_images/sidebar-11.jpg" style="margin-right: 4px" />
             </a>
             <div class="divider" *ngIf="developerMode"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)" *ngIf="developerMode"><img height="60" width="80" src="/assets/light.jpg" /> Light Theme</a>
