[#68] draft implementaiton of form-chart and added example report REP___LargeSales

--- a/fe/src/app/form/form-chart/form-chart.component.html
+++ b/fe/src/app/form/form-chart/form-chart.component.html
@@ -270,7 +270,7 @@
   class="chart-container"
   [scheme]="colorScheme"
   [schemeType]="schemeType"
-  [results]="lineData"
+  [results]="multi"
   [animations]="animations"
   [legend]="showLegend"
   [legendTitle]="legendTitle"
