--- a/fe/src/app/form/form.component.html
+++ b/fe/src/app/form/form.component.html
@@ -14,7 +14,7 @@
          *ngIf="(form$ | async)">
     </form_item>
 
-    <div style="width: 1000px; height: 450px">
+    <!-- <div style="width: 1000px; height: 450px">
         <form-chart chartType="bar-horizontal" yAxisLabel="$ Sales" [view]="[800, 400]" [showXAxisLabel]="false"></form-chart>
     </div>
     <div style="width: 1000px; height: 450px">
@@ -32,6 +32,6 @@
     </div>
     <div style="width: 1000px; height: 450px">
         <form-chart chartType="line-chart" yAxisLabel="Unit Sales" [view]="[800, 400]" [showXAxisLabel]="false"></form-chart>
-    </div>
+    </div> -->
     
 </form>
