--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -49,3 +49,21 @@ form div .form-control.ng-dirty.ng-pending:not(form) {
     flex-grow: 1;
     max-width: 100%;
 }
+
+.frmdb-popup {
+    position: fixed;
+    cursor: move;
+    touch-action: none;
+    -webkit-user-drag: none;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+    width: 10rem;
+    min-height: 10rem;
+    bottom: 15rem;
+    right: 15rem;
+    background-color: white;
+    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    padding: .5rem;
+    z-index: 10000;
+}
