--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -55,22 +55,20 @@
   <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="/assets/nowui.jpg" />
     NowUI Theme</a>
   <div class="divider"></div>
-  <input #nameInput type="text" (click)="stopPropagation($event)" />
   <a class="dropdown-item" href="javascript:void(0)">
-    <span title="{{'add table' | i18n}}" class="add-del-things" (click)="addTable(nameInput)">
+    <span title="{{'add table' | i18n}}" class="add-del-things" (click)="addTable(tableName)">
       <fa-icon [icon]="tableIcon" class="fa-sm"></fa-icon><sup>
         <fa-icon [icon]="addIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    {{currentEntity?._id + '___' + nameInput.value}}
-  </a>
-  <a class="dropdown-item" href="javascript:void(0)">
-    <span title="{{'add column' | i18n}}" class="add-del-things" (click)="addColumnToCurrentTable(nameInput)">
+    {{currentEntity?._id}}<input #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '___')" value="___" />
+    &nbsp;/&nbsp;
+    <span title="{{'add column' | i18n}}" class="add-del-things" (click)="addColumnToCurrentTable(columnName)">
       <fa-icon [icon]="columnIcon" class="fa-sm"></fa-icon><sup>
         <fa-icon [icon]="addIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    {{currentEntity?._id + '.' + nameInput.value}}
+    {{currentEntity?._id}}<input #columnName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(columnName, '.')" value="." />
   </a>
   <a class="dropdown-item" href="javascript:void(0)">
     <span title="{{'add table' | i18n}}" class="add-del-things" (click)="delTable()">
@@ -79,8 +77,7 @@
       </sup>
     </span>
     {{currentEntity?._id}}
-  </a>
-  <a class="dropdown-item" href="javascript:void(0)">
+    &nbsp;/&nbsp;
     <span title="{{'add column' | i18n}}" class="add-del-things" (click)="delColumnFromCurrentTable()">
       <fa-icon [icon]="columnIcon" class="fa-sm"></fa-icon><sup>
         <fa-icon [icon]="delIcon" class="fa-xs"></fa-icon>
