#47 del prop workng

--- a/fe/src/app/table/table-header.component.scss
+++ b/fe/src/app/table/table-header.component.scss
@@ -41,6 +41,7 @@
     left: 0;
     font-size: 0.75em;
     color: lightgrey;
+    cursor: pointer;
     text-decoration: underline;
     text-transform: none;
 }
