--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -61,14 +61,16 @@
         <fa-icon [icon]="addIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    {{currentEntity?._id}}<input #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '___')" value="___" />
+    <span style="font-size: 75%">{{currentEntity?._id}}</span>
+    <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '___')" value="___" />
     &nbsp;/&nbsp;
     <span title="{{'add column' | i18n}}" class="add-del-things" (click)="addColumnToCurrentTable(columnName)">
       <fa-icon [icon]="columnIcon" class="fa-sm"></fa-icon><sup>
         <fa-icon [icon]="addIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    {{currentEntity?._id}}<input #columnName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(columnName, '.')" value="." />
+    <span style="font-size: 75%">{{currentEntity?._id}}</span>
+    <input style="width: 5em" #columnName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(columnName, '.')" value="." />
   </a>
   <a class="dropdown-item" href="javascript:void(0)">
     <span title="{{'add table' | i18n}}" class="add-del-things" (click)="delTable()">
@@ -76,14 +78,14 @@
         <fa-icon [icon]="delIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    {{currentEntity?._id}}
+    <span style="font-size: 75%">{{currentEntity?._id}}</span>
     &nbsp;/&nbsp;
     <span title="{{'add column' | i18n}}" class="add-del-things" (click)="delColumnFromCurrentTable()">
       <fa-icon [icon]="columnIcon" class="fa-sm"></fa-icon><sup>
         <fa-icon [icon]="delIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    {{currentPropery?.name}}
+    <span style="font-size: 75%">{{currentProperty?.name}}</span>
   </a>
 </ng-container>
 <div class="divider"></div>
