--- a/fe/src/app/applications/applications.component.html
+++ b/fe/src/app/applications/applications.component.html
@@ -1,3 +1,33 @@
-<p>
-  applications works!
-</p>
+<div>&nbsp;</div>
+<div id="boxDIV_1">
+  <table id="frmdbHeader">
+    <tr>
+      <td id="frmdbLogo">
+        <img id="frmdbIMG_6" width="66" height="62" alt="icon2.png" src="/assets/icon2.webp" />
+      </td>
+      <td>
+        <h1 id="frmdbH1_9">FormulaDB</h1>
+        <div id="frmdbP_11">
+          Build apps instantly using spreadsheet-like formulas.
+        </div>
+      </td>
+    </tr>
+  </table>
+
+  <h1>My Applications</h1>
+  <div style="white-space: nowrap;"><fa-icon [icon]="addIcon" class="fa-sm" (click)="addApp(appName)"></fa-icon>&nbsp;<input #appName type="text"/></div>
+  <div id="myApps">
+
+  </div>
+
+  <h1>Example Applications</h1>
+  <div id="exampleApps">
+    <a routerLink="/inventory/0" ><frmdb-application [icon1]="inventoryIcon1" [icon2]="inventoryIcon2" appName="Basic Inventory, Single Warehouse" ></frmdb-application></a>
+    <a routerLink="/booking/0" ><frmdb-application [icon1]="bookingIcon1" [icon2]="bookingIcon2" appName="Booking Items (e.g. rooms, events, cars)" ></frmdb-application></a>
+    <a routerLink="/expenses/0" ><frmdb-application [icon1]="basicExpenses1" [icon2]="basicExpenses2" appName="Expenses, Accounts, Transactions, Budgets" ></frmdb-application></a>
+    <a routerLink="/ticketing/0" ><frmdb-application [icon1]="ticketing1" [icon2]="ticketing2" appName="Ticketing, Issues" ></frmdb-application></a>
+    <a routerLink="/planning/0" ><frmdb-application [icon1]="planning1" [icon2]="planning2" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
+    <a routerLink="/ecommerce/0" ><frmdb-application [icon1]="eCommerce1" [icon2]="eCommerce2" appName="Basic eCommerce" ></frmdb-application></a>
+    <a routerLink="/service/0" ><frmdb-application [icon1]="service1" [icon2]="service2" appName="Bike/Car Service" ></frmdb-application></a>
+  </div>
+</div>
