--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -62,7 +62,7 @@
       </sup>
     </span>
     <span style="font-size: 75%">{{currentEntity?._id}}</span>
-    <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '___')" value="___" />
+    <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '__')" value="__" />
     &nbsp;/&nbsp;
     <span title="{{'add column' | i18n}}" class="add-del-things" (click)="addColumnToCurrentTable(columnName)">
       <fa-icon [icon]="columnIcon" class="fa-sm"></fa-icon><sup>
