#82 added templates to example apps

--- a/fe/src/app/applications/application/application.component.html
+++ b/fe/src/app/applications/application/application.component.html
@@ -1,13 +1,9 @@
-<div>
-  <div style="margin: auto; display: inline-block; white-space: nowrap; margin-bottom: 10px;">
-    <fa-icon [icon]="icon1" class="fa-3x"></fa-icon>
-    &nbsp;
-    <fa-icon [icon]="icon2" class="fa-3x"></fa-icon>
+<div class="app">
+  <img [src]="imgSrc" width="200" height="120" />
+  <div class="appName">
+    <div>{{appName}}</div>
   </div>
-  <div style="margin: auto; text-align: center">
-    {{appName}}
-  </div>
-  <div>
-    
-  </div>
+</div>
+<div style="text-align: center;">
+  <fa-icon [icon]="selectIcon" class="fa-sm"></fa-icon>
 </div>
