--- a/fe/src/app/applications/applications.component.html
+++ b/fe/src/app/applications/applications.component.html
@@ -22,12 +22,18 @@
 
   <h1>Example Applications</h1>
   <div id="exampleApps">
-    <a routerLink="/inventory/0" ><frmdb-application [icon1]="inventoryIcon1" [icon2]="inventoryIcon2" appName="Basic Inventory, Single Warehouse" ></frmdb-application></a>
-    <a routerLink="/booking/0" ><frmdb-application [icon1]="bookingIcon1" [icon2]="bookingIcon2" appName="Booking Items (e.g. rooms, events, cars)" ></frmdb-application></a>
-    <a routerLink="/expenses/0" ><frmdb-application [icon1]="basicExpenses1" [icon2]="basicExpenses2" appName="Expenses, Accounts, Transactions, Budgets" ></frmdb-application></a>
-    <a routerLink="/ticketing/0" ><frmdb-application [icon1]="ticketing1" [icon2]="ticketing2" appName="Ticketing, Issues" ></frmdb-application></a>
-    <a routerLink="/planning/0" ><frmdb-application [icon1]="planning1" [icon2]="planning2" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
-    <a routerLink="/ecommerce/0" ><frmdb-application [icon1]="eCommerce1" [icon2]="eCommerce2" appName="Basic eCommerce" ></frmdb-application></a>
-    <a routerLink="/service/0" ><frmdb-application [icon1]="service1" [icon2]="service2" appName="Bike/Car Service" ></frmdb-application></a>
+    <a routerLink="/inventory/0" ><frmdb-application imgSrc="/assets/templates/inventory.jpg" appName="Basic Inventory, Single Warehouse" ></frmdb-application></a>
+    <a routerLink="/booking/0" ><frmdb-application imgSrc="/assets/templates/booking.jpg" appName="Booking Items (e.g. rooms, events, cars)" ></frmdb-application></a>
+    <a routerLink="/expenses/0" ><frmdb-application imgSrc="/assets/templates/expenses.jpg" appName="Expenses, Accounts, Transactions, Budgets" ></frmdb-application></a>
+    <a routerLink="/ticketing/0" ><frmdb-application imgSrc="/assets/templates/ticketing.png" appName="Ticketing, Issues" ></frmdb-application></a>
+    <a routerLink="/planning/0" ><frmdb-application imgSrc="/assets/templates/planning.jpg" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
+    <a routerLink="/ecommerce/0" ><frmdb-application imgSrc="/assets/templates/eCommerce.jpg" appName="Basic eCommerce" ></frmdb-application></a>
+    <a routerLink="/service/0" ><frmdb-application imgSrc="/assets/templates/service.jpg" appName="Bike/Car Service" ></frmdb-application></a>
   </div>
 </div>
+
+
+
+
+
+
