introduced server side table rendering

--- a/fe/src/app/table/table.component.html
+++ b/fe/src/app/table/table.component.html
@@ -11,5 +11,6 @@
         (columnMoved)="columnMoving($event)" (dragStopped)="columnMoved($event)"
         (columnResized)="columnResized($event)" (filterChanged)="filterChanged($event)" 
         (sortChanged)="sortChanged($event)"
+        rowModelType="serverSide"
         ></ag-grid-angular>
 </div>
