--- a/fe/src/app/table/table.component.html
+++ b/fe/src/app/table/table.component.html
@@ -12,5 +12,6 @@
         (columnResized)="columnResized($event)" (filterChanged)="filterChanged($event)" 
         (sortChanged)="sortChanged($event)"
         rowModelType="serverSide"
+        enableRangeSelection="true"
         ></ag-grid-angular>
 </div>
