--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="developerMode">
-  <div class="divider"></div>
+  <!-- <div class="divider"></div>
   <a class="dropdown-item" href="javascript:void(0)">
     <img src="/assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
     <img src="/assets/flags/de.png" (click)="switchLanguage('de')" style="margin-right: 5px; cursor: pointer" />
@@ -54,7 +54,7 @@
     Material Theme</a>
   <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="/assets/nowui.jpg" />
     NowUI Theme</a>
-  <div class="divider"></div>
+  <div class="divider"></div> -->
   <a class="dropdown-item" href="javascript:void(0)">
     <span title="{{'add table' | i18n}}" class="add-del-things" (click)="addTable(tableName)">
       <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
