#99 more work on grouping

--- a/fe/src/app/themes/default-theme/layout/layout.component.html
+++ b/fe/src/app/themes/default-theme/layout/layout.component.html
@@ -8,7 +8,7 @@
     <div class="sidebar-wrapper" [style.background-image]="'background-image: url(' + (sidebarImageUrl$ | async) + ')'">
       <div class="logo">
         <a href="http://formuladb.io" class="simple-text">
-          BRAND TBD
+          Orbico SFA
         </a>
       </div>
       <frmdb-navigation class="nav"></frmdb-navigation>
