--- a/fe/src/app/themes/material-dashboard-theme/layout/layout.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/layout/layout.component.html
@@ -7,7 +7,7 @@
     Tip 2: you can also add an image using data-image tag
 -->
     <div class="logo">
-      Logo/Brand TBD
+      Orbico SFA
     </div>
     <div class="sidebar-wrapper">
       <ul frmdb-navigation class="nav">
