--- a/fe/src/app/themes/now-uidashboard-theme/layout/layout.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/layout/layout.component.html
@@ -8,7 +8,7 @@
         Logo TBD
       </a>
       <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-        Brand TBD
+        Orbico SFA
       </a>
     </div>
     <div class="sidebar-wrapper">
