--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="developerMode">
-  <!-- <div class="divider"></div>
+  <div class="divider"></div>
   <a class="dropdown-item" href="javascript:void(0)">
     <img src="/assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
     <img src="/assets/flags/de.png" (click)="switchLanguage('de')" style="margin-right: 5px; cursor: pointer" />
@@ -54,30 +54,30 @@
     Material Theme</a>
   <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="/assets/nowui.jpg" />
     NowUI Theme</a>
-  <div class="divider"></div> -->
+  <div class="divider"></div>
   <a class="dropdown-item" href="javascript:void(0)">
+    <span style="font-size: 75%">{{currentEntity?._id}}</span>
+    <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '__')"
+      value="__" />
     <span title="{{'add table' | i18n}}" class="add-del-things" (click)="addTable(tableName)">
       <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
       <sup>
         <fa-icon [icon]="tableIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    <span style="font-size: 75%">{{currentEntity?._id}}</span>
-    <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '__')"
-      value="__" />
     &nbsp;/&nbsp;
+    <span style="font-size: 75%">{{currentEntity?._id}}</span>
+    <input style="width: 5em" #columnName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(columnName, '.')"
+      value="." />
     <span title="{{'add column' | i18n}}" class="add-del-things" (click)="addColumnToCurrentTable(columnName)">
       <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
       <sup>
         <fa-icon [icon]="columnIcon" class="fa-xs"></fa-icon>
       </sup>
     </span>
-    <span style="font-size: 75%">{{currentEntity?._id}}</span>
-    <input style="width: 5em" #columnName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(columnName, '.')"
-      value="." />
   </a>
   <a class="dropdown-item" href="javascript:void(0)">
-    <span title="{{'add table' | i18n}}" class="add-del-things" (click)="delTable()">
+    <span title="{{'del table' | i18n}}" class="add-del-things" (click)="delTable()">
 
       <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
       <sup>
@@ -86,7 +86,7 @@
     </span>
     <span style="font-size: 75%">{{currentEntity?._id}}</span>
     &nbsp;/&nbsp;
-    <span title="{{'add column' | i18n}}" class="add-del-things" (click)="delColumnFromCurrentTable()">
+    <span title="{{'del column' | i18n}}" class="add-del-things" (click)="delColumnFromCurrentTable()">
       <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
       <sup>
         <fa-icon [icon]="columnIcon" class="fa-xs"></fa-icon>
@@ -94,9 +94,13 @@
     </span>
     <span style="font-size: 75%">{{currentProperty?.name}}</span>
   </a>
-  <div class="divider"></div>
-  <a class="dropdown-item" href="javascript:void(0)" (click)="goToAppList()">Leave this app</a>
 </ng-container>
 <div class="divider"></div>
-<a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()"><i class="nc-icon nc-settings-90"></i>{{
-  ((developerMode) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}</a>
+<a class="dropdown-item" href="javascript:void(0)" (click)="goToAppList()">
+  <fa-icon [icon]="changeAppIcon" class="fa-sm"></fa-icon>
+  {{ 'Change app' | i18n }}
+</a>
+<a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()">
+  <fa-icon [icon]="devModeIcon" class="fa-sm"></fa-icon>
+  {{((developerMode) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}
+</a>
