--prod build, docker images and compose

--- a/fe/src/app/applications/applications.component.html
+++ b/fe/src/app/applications/applications.component.html
@@ -3,7 +3,7 @@
   <table id="frmdbHeader">
     <tr>
       <td id="frmdbLogo">
-        <img id="frmdbIMG_6" width="66" height="62" alt="icon2.png" src="/assets/icon2.webp" />
+        <img id="frmdbIMG_6" width="66" height="62" alt="icon2.png" src="assets/icon2.webp" />
       </td>
       <td>
         <h1 id="frmdbH1_9">FormulaDB</h1>
@@ -22,13 +22,13 @@
 
   <h1>Example Applications</h1>
   <div id="exampleApps">
-    <a routerLink="/inventory/0" ><frmdb-application imgSrc="/assets/templates/inventory.jpg" appName="Basic Inventory, Single Warehouse" ></frmdb-application></a>
-    <a routerLink="/booking/0" ><frmdb-application imgSrc="/assets/templates/booking.jpg" appName="Booking Items (e.g. rooms, events, cars)" ></frmdb-application></a>
-    <a routerLink="/expenses/0" ><frmdb-application imgSrc="/assets/templates/expenses.jpg" appName="Expenses, Accounts, Transactions, Budgets" ></frmdb-application></a>
-    <a routerLink="/ticketing/0" ><frmdb-application imgSrc="/assets/templates/ticketing.png" appName="Ticketing, Issues" ></frmdb-application></a>
-    <a routerLink="/planning/0" ><frmdb-application imgSrc="/assets/templates/planning.jpg" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
-    <a routerLink="/ecommerce/0" ><frmdb-application imgSrc="/assets/templates/eCommerce.jpg" appName="Basic eCommerce" ></frmdb-application></a>
-    <a routerLink="/service/0" ><frmdb-application imgSrc="/assets/templates/service.jpg" appName="Bike/Car Service" ></frmdb-application></a>
+    <a routerLink="/inventory/0" ><frmdb-application imgSrc="assets/templates/inventory.jpg" appName="Basic Inventory, Single Warehouse" ></frmdb-application></a>
+    <a routerLink="/booking/0" ><frmdb-application imgSrc="assets/templates/booking.jpg" appName="Booking Items (e.g. rooms, events, cars)" ></frmdb-application></a>
+    <a routerLink="/expenses/0" ><frmdb-application imgSrc="assets/templates/expenses.jpg" appName="Expenses, Accounts, Transactions, Budgets" ></frmdb-application></a>
+    <a routerLink="/ticketing/0" ><frmdb-application imgSrc="assets/templates/ticketing.png" appName="Ticketing, Issues" ></frmdb-application></a>
+    <a routerLink="/planning/0" ><frmdb-application imgSrc="assets/templates/planning.jpg" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
+    <a routerLink="/ecommerce/0" ><frmdb-application imgSrc="assets/templates/eCommerce.jpg" appName="Basic eCommerce" ></frmdb-application></a>
+    <a routerLink="/service/0" ><frmdb-application imgSrc="assets/templates/service.jpg" appName="Bike/Car Service" ></frmdb-application></a>
   </div>
 </div>
 
