--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -14,7 +14,7 @@
         <li class="nav-item dropdown" [class.show]="editorOpened">
           <a class="nav-link" frmdbToggleFormulaEditor class="formula-button" [class.isDisabled]="!developerMode" href="javascript:void(0)"
             (click)="toggleFormulaEditor()">
-            <img src="/assets/img/formula16.png" width="16" height="16" />
+            <img src="assets/img/formula16.png" width="16" height="16" />
           </a>
         </li>
         <li class="nav-item">
@@ -31,7 +31,7 @@
         <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
           <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="TopNavSettings" ngbDropdownToggle
             aria-haspopup="true" aria-expanded="false">
-            <span class="notification">2</span>
+            <!-- <span class="notification">2</span> -->
             <span class="no-icon"><i class="nc-icon nc-settings-gear-64"></i></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
