--- a/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
@@ -15,7 +15,7 @@
           <input type="text" frmdbCurrentFormula value="" style="min-width: 500px" class="form-control" placeholder="FORMULA...">
           <div class="input-group-append">
             <div class="input-group-text">
-              <img src="/assets/img/formula16.png" width="16" height="16" />
+              <img src="assets/img/formula16.png" width="16" height="16" />
             </div>
           </div>
         </div>
