--- a/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navigation">
         <form class="navbar-form navbar-right navbar-search-form" role="search">
           <div class="input-group">
-            <img src="/assets/img/formula16.png" width="16" height="16" style="margin-top: 10px" />
+            <img src="assets/img/formula16.png" width="16" height="16" style="margin-top: 10px" />
             <input type="text" frmdbCurrentFormula value="" class="form-control" style="min-width: 500px" placeholder="FORMULA...">
           </div>
         </form>  
