--- a/fe/src/app/applications/applications.component.html
+++ b/fe/src/app/applications/applications.component.html
@@ -29,6 +29,7 @@
     <a routerLink="/planning/0" ><frmdb-application imgSrc="assets/templates/planning.jpg" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
     <a routerLink="/ecommerce/0" ><frmdb-application imgSrc="assets/templates/eCommerce.jpg" appName="Basic eCommerce" ></frmdb-application></a>
     <a routerLink="/service/0" ><frmdb-application imgSrc="assets/templates/service.jpg" appName="Bike/Car Service" ></frmdb-application></a>
+    <a routerLink="/reporting/0" ><frmdb-application imgSrc="assets/templates/reporting.png" appName="Reporting" ></frmdb-application></a>
   </div>
 </div>
 
