--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -1,4 +1,4 @@
-<!-- <ng-container *ngIf="developerMode">
+<ng-container *ngIf="developerMode">
   <div class="divider"></div>
   <a class="dropdown-item" href="javascript:void(0)">
     <img src="assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
@@ -103,4 +103,4 @@
 <a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()">
   <fa-icon [icon]="devModeIcon" class="fa-sm"></fa-icon>
   {{((developerMode) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}
-</a> -->
+</a>
