--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -1,106 +1,137 @@
-<ng-container *ngIf="developerMode">
-  <div class="divider"></div>
-  <a class="dropdown-item" href="javascript:void(0)">
-    <img src="assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/de.png" (click)="switchLanguage('de')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/fr.png" (click)="switchLanguage('fr')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/es.png" (click)="switchLanguage('es')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/gr.png" (click)="switchLanguage('gr')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/it.png" (click)="switchLanguage('it')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/pl.png" (click)="switchLanguage('pl')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/pt.png" (click)="switchLanguage('pt')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/ro.png" (click)="switchLanguage('ro')" style="margin-right: 5px; cursor: pointer" />
-    <img src="assets/flags/sv.png" (click)="switchLanguage('sv')" style="margin-right: 5px; cursor: pointer" />
-    &nbsp;
-  </a>
-  <div class="divider"></div>
-  <a class="dropdown-item" href="javascript:void(0)">
-    <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('red')" style="color: red; cursor: pointer"></i>
-    <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('green')" style="color: green; cursor: pointer"></i>
-    <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('blue')" style="color: blue; cursor: pointer"></i>
-    <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('purple')" style="color: purple; cursor: pointer"></i>
-    <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('orange')" style="color: orange; cursor: pointer"></i>
-    &nbsp;
-  </a>
-  <div class="divider"></div>
-  <a class="dropdown-item" disabled href="javascript:void(0)">
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-4.jpg')" src="assets/sidebar_images/sidebar-4.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-1.jpg')" src="assets/sidebar_images/sidebar-1.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-2.jpg')" src="assets/sidebar_images/sidebar-2.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-3.jpg')" src="assets/sidebar_images/sidebar-3.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-5.jpg')" src="assets/sidebar_images/sidebar-5.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-6.jpg')" src="assets/sidebar_images/sidebar-6.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-7.jpg')" src="assets/sidebar_images/sidebar-7.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-8.jpg')" src="assets/sidebar_images/sidebar-8.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-9.jpg')" src="assets/sidebar_images/sidebar-9.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-10.jpg')" src="assets/sidebar_images/sidebar-10.jpg"
-      style="margin-right: 4px" />
-    <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-11.jpg')" src="assets/sidebar_images/sidebar-11.jpg"
-      style="margin-right: 4px" />
-  </a>
-  <div class="divider"></div>
-  <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="60" width="80" src="assets/light.jpg" />
-    Light Theme</a>
-  <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="60" width="80" src="assets/material.jpg" />
-    Material Theme</a>
-  <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="assets/nowui.jpg" />
-    NowUI Theme</a>
-  <div class="divider"></div>
-  <a class="dropdown-item" href="javascript:void(0)">
-    <span style="font-size: 75%">{{currentEntity?._id}}</span>
-    <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '__')"
-      value="__" />
-    <span title="{{'add table' | i18n}}" class="add-del-things" (click)="addTable(tableName)">
-      <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
-      <sup>
-        <fa-icon [icon]="tableIcon" class="fa-xs"></fa-icon>
-      </sup>
-    </span>
-    &nbsp;/&nbsp;
-    <span style="font-size: 75%">{{currentEntity?._id}}</span>
-    <input style="width: 5em" #columnName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(columnName, '.')"
-      value="." />
-    <span title="{{'add column' | i18n}}" class="add-del-things" (click)="addColumnToCurrentTable(columnName)">
-      <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
-      <sup>
-        <fa-icon [icon]="columnIcon" class="fa-xs"></fa-icon>
-      </sup>
-    </span>
-  </a>
-  <a class="dropdown-item" href="javascript:void(0)">
-    <span title="{{'del table' | i18n}}" class="add-del-things" (click)="delTable()">
+<nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <form class="navbar-form" role="search">
+        <div class="input-group">
+          <frmdb-formula-code-editor></frmdb-formula-code-editor>
+        </div>
+      </form>
+    </li>
+  </ul>
 
-      <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
-      <sup>
-        <fa-icon [icon]="tableIcon" class="fa-xs"></fa-icon>
-      </sup>
-    </span>
-    <span style="font-size: 75%">{{currentEntity?._id}}</span>
-    &nbsp;/&nbsp;
-    <span title="{{'del column' | i18n}}" class="add-del-things" (click)="delColumnFromCurrentTable()">
-      <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
-      <sup>
-        <fa-icon [icon]="columnIcon" class="fa-xs"></fa-icon>
-      </sup>
-    </span>
-    <span style="font-size: 75%">{{currentProperty?.name}}</span>
-  </a>
-</ng-container>
-<div class="divider"></div>
-<a class="dropdown-item" href="javascript:void(0)" (click)="goToAppList()">
-  <fa-icon [icon]="changeAppIcon" class="fa-sm"></fa-icon>
-  {{ 'Change app' | i18n }}
-</a>
-<a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()">
-  <fa-icon [icon]="devModeIcon" class="fa-sm"></fa-icon>
-  {{((developerMode) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}
-</a>
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
+      <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="TopNavSettings" ngbDropdownToggle
+        aria-haspopup="true" aria-expanded="false">
+        <fa-icon [icon]="settingsIcon" class="fa-sm"></fa-icon>
+      </a>
+      <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
+
+        <ng-container *ngIf="developerMode">
+          <div class="divider"></div>
+          <a class="dropdown-item" href="javascript:void(0)">
+            <img src="assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/de.png" (click)="switchLanguage('de')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/fr.png" (click)="switchLanguage('fr')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/es.png" (click)="switchLanguage('es')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/gr.png" (click)="switchLanguage('gr')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/it.png" (click)="switchLanguage('it')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/pl.png" (click)="switchLanguage('pl')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/pt.png" (click)="switchLanguage('pt')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/ro.png" (click)="switchLanguage('ro')" style="margin-right: 5px; cursor: pointer" />
+            <img src="assets/flags/sv.png" (click)="switchLanguage('sv')" style="margin-right: 5px; cursor: pointer" />
+            &nbsp;
+          </a>
+          <div class="divider"></div>
+          <a class="dropdown-item" href="javascript:void(0)">
+            <fa-icon [icon]="collorPaletteIcon" (click)="switchThemeColorPalette('red')"
+              style="color: red; cursor: pointer"></fa-icon>&nbsp;
+            <fa-icon [icon]="collorPaletteIcon" (click)="switchThemeColorPalette('green')"
+              style="color: green; cursor: pointer"></fa-icon>&nbsp;
+            <fa-icon [icon]="collorPaletteIcon" (click)="switchThemeColorPalette('blue')"
+              style="color: blue; cursor: pointer"></fa-icon>&nbsp;
+            <fa-icon [icon]="collorPaletteIcon" (click)="switchThemeColorPalette('purple')"
+              style="color: purple; cursor: pointer"></fa-icon>&nbsp;
+            <fa-icon [icon]="collorPaletteIcon" (click)="switchThemeColorPalette('orange')"
+              style="color: orange; cursor: pointer"></fa-icon>&nbsp;
+          </a>
+          <div class="divider"></div>
+          <a class="dropdown-item" disabled href="javascript:void(0)">
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-4.jpg')"
+              src="assets/sidebar_images/sidebar-4.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-1.jpg')"
+              src="assets/sidebar_images/sidebar-1.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-2.jpg')"
+              src="assets/sidebar_images/sidebar-2.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-3.jpg')"
+              src="assets/sidebar_images/sidebar-3.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-5.jpg')"
+              src="assets/sidebar_images/sidebar-5.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-6.jpg')"
+              src="assets/sidebar_images/sidebar-6.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-7.jpg')"
+              src="assets/sidebar_images/sidebar-7.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-8.jpg')"
+              src="assets/sidebar_images/sidebar-8.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-9.jpg')"
+              src="assets/sidebar_images/sidebar-9.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-10.jpg')"
+              src="assets/sidebar_images/sidebar-10.jpg" style="margin-right: 4px" />
+            <img height="50" width="30" (click)="switchSideBarImage('assets/sidebar_images/sidebar-11.jpg')"
+              src="assets/sidebar_images/sidebar-11.jpg" style="margin-right: 4px" />
+          </a>
+          <div class="divider"></div>
+          <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="60" width="80"
+              src="assets/light.jpg" />
+            Light Theme</a>
+          <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="60" width="80"
+              src="assets/material.jpg" />
+            Material Theme</a>
+          <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80"
+              src="assets/nowui.jpg" />
+            NowUI Theme</a>
+          <div class="divider"></div>
+          <a class="dropdown-item" href="javascript:void(0)">
+            <span style="font-size: 75%">{{currentEntity?._id}}</span>
+            <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)"
+              (keydown)="keepPrefix(tableName, '__')" value="__" />
+            <span title="{{'add table' | i18n}}" class="add-del-things" (click)="addTable(tableName)">
+              <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
+              <sup>
+                <fa-icon [icon]="tableIcon" class="fa-xs"></fa-icon>
+              </sup>
+            </span>
+            &nbsp;/&nbsp;
+            <span style="font-size: 75%">{{currentEntity?._id}}</span>
+            <input style="width: 5em" #columnName type="text" (click)="stopPropagation($event)"
+              (keydown)="keepPrefix(columnName, '.')" value="." />
+            <span title="{{'add column' | i18n}}" class="add-del-things" (click)="addColumnToCurrentTable(columnName)">
+              <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
+              <sup>
+                <fa-icon [icon]="columnIcon" class="fa-xs"></fa-icon>
+              </sup>
+            </span>
+          </a>
+          <a class="dropdown-item" href="javascript:void(0)">
+            <span title="{{'del table' | i18n}}" class="add-del-things" (click)="delTable()">
+
+              <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
+              <sup>
+                <fa-icon [icon]="tableIcon" class="fa-xs"></fa-icon>
+              </sup>
+            </span>
+            <span style="font-size: 75%">{{currentEntity?._id}}</span>
+            &nbsp;/&nbsp;
+            <span title="{{'del column' | i18n}}" class="add-del-things" (click)="delColumnFromCurrentTable()">
+              <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
+              <sup>
+                <fa-icon [icon]="columnIcon" class="fa-xs"></fa-icon>
+              </sup>
+            </span>
+            <span style="font-size: 75%">{{currentProperty?.name}}</span>
+          </a>
+        </ng-container>
+        <div class="divider"></div>
+        <a class="dropdown-item" href="javascript:void(0)" (click)="goToAppList()">
+          <fa-icon [icon]="changeAppIcon" class="fa-sm"></fa-icon>
+          {{ 'Change app' | i18n }}
+        </a>
+        <div class="divider"></div>
+        <a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()">
+          <fa-icon [icon]="devModeIcon" class="fa-sm"></fa-icon>
+          {{((developerMode) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}
+        </a>
+      </div>
+    </li>
+  </ul>
+</nav>
