--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-    margin: 0;
+    margin: 50px 0 0 0;
     line-height: 1rem!important;
 }
 
