--- a/fe/src/app/table/table.component.html
+++ b/fe/src/app/table/table.component.html
@@ -1,8 +1,8 @@
-<div class="mwz-table-placeholder" *ngIf="!data">&nbsp;</div>
-<div class="mwz-table-wrapper" *ngIf="data">
+<div class="mwz-table-wrapper">
     <button (click)="excel()">Excel</button>
-    <ag-grid-angular #agGrid class="ag-theme-balham" rowHeight="25" [rowData]="data" enableColResize="true"
+    <ag-grid-angular #agGrid class="ag-theme-balham" rowHeight="25" enableColResize="true"
         [frameworkComponents]="frameworkComponents" [defaultColDef]="defaultColDef" (rowDoubleClicked)="onRowDoubleClicked($event)"
+        (rowClicked)="onRowClicked($event)"
         (cellFocused)="onCellFocused($event)" enableSorting="true" enableFilter="true" floatingFilter="true"
         [autoGroupColumnDef]="autoGroupColumnDef" [sideBar]="sideBar" (gridReady)="onGridReady($event)" (columnMoved)="columnMoving($event)"
         (dragStopped)="columnMoved($event)" (columnResized)="columnResized($event)" (filterChanged)="filterChanged($event)"
