--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light">
+<nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light" style="padding: 0">
   <ul class="navbar-nav">
     <li class="nav-item">
       <form class="navbar-form" role="search">
