--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
@@ -1,8 +1,22 @@
 .formula-code-editor {
     height: 22px;
-    min-width: 920px;
+    min-width: 900px;
     width:100%;
     height:100%;
+    white-space: nowrap;
+}
+
+.formula-code-editor > div {
+    display: inline-block; 
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.formula-code-editor > a > img {
+    margin-top: -10px;
+    margin-right: 5px;
 }
 
 .editor-textarea,
@@ -103,4 +117,16 @@
 
 :host ::ng-deep .color-blue{
     color: blue;
+}
+
+.formula-button {
+    margin-right: 5px;
+    border: 0px;
+}
+
+.formula-button.isDisabled {
+    color: currentColor;
+    cursor: not-allowed;
+    opacity: 0.5;
+    text-decoration: none;
 }
