--- a/fe/src/app/app.component.html
+++ b/fe/src/app/app.component.html
@@ -1,2 +1,5 @@
 <frmdb-dev-mode-opts></frmdb-dev-mode-opts>
 <router-outlet></router-outlet>
+<img (click)="toggleDevMode()" 
+    id="frmdb-toggle-dev-mode" [class.dev-mode-on]="devMode$ | async"
+    width="24" height="24" alt="devMode-toggle" src="assets/formuladb24.png" />
